data/derived/comb/progs/unify/prog4332.ml.out
Characters 147-165:
  | Sine (e1)          -> Printf.sprintf"e1"
                          ^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         string -> string
